Image works and fits to right place, changed welcome message and started adding colors for interface. Ready to add rest of controls to home window.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,6 @@
     
     <!-- Home Activity -->
     <string name="profilePictureContentDescription">Profile Picture</string>
-    <string name="profileWelcomeMessage">Welcome back to Gloggr!</string>
+    <string name="profileWelcomeMessage">[Username]\'s Gloggr</string>
 
 </resources>
