Made progress bars coloured. Added table for games by system, which will be filled in dynamically via code at a later time.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="profileBronzeContentDescription">Bronze</string>
     <string name="profileRedContentDescription">Red</string>
     <string name="profileCompletionTableHeader">Games by Completion Status</string>
+    <string name="profileSystemTableHeader">Games by System</string>
 
 </resources>
