--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,8 @@
     
     <!-- Whole App -->
     <string name="app_name">Gloggr</string>
+    
+    <!-- Activity titles -->
     <string name="currently_playing_title">Currently Playing</string>
     <string name="game_list_title">Game List</string>
     <string name="preferences_title">Preferences</string>
